apps/api/gpt-api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gpt-api
  namespace: api
  labels:
    app: gpt-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gpt-api
  template:
    metadata:
      labels:
        app: gpt-api
    spec:
      containers:
      - name: gpt-api
        image: hyeonwoo5342/gpt-api:14
        imagePullPolicy: Always
        ports:
        - containerPort: 9900
      imagePullSecrets:
      - name: dockerhub-secret
